# CODE_ANAYLZER

./: .codeA.ignore  .cspell.json  .currsorules  .env.example  .env.example.template  .gitignore  .gitlearn.md  CODE_ANALYZER_STRUCTURE.yaml  DEV-PLAN.md  LEARNING.md  LICENSE  PUBLISHING.md  README.md  TEST.md  add_pattern_methods.sh  add_reporting.sh  ai_powered_fix.py  alembic.ini  clean_migrate_monitoring.sh  cleanup_city.sh  code_analysis.py  code_analyzer.db  complete_patterns.sh  conftest.py  fix_all.sh  fix_analyzer.sh  fix_city.sh  fix_core_issues_safe.sh  fix_database.sh  fix_db_manager.sh  fix_db_paths.sh  fix_deps.sh  fix_immediate.sh  fix_imports.sh  fix_methods.sh  fix_pattern_detector.sh  fix_pattern_tests.sh  fix_remaining.sh  fix_structure.sh  fix_test_infrastructure.sh  (+34 more)
DEV-MAN-CREW/: GOALS-Checklist.md  REPORT.md  TODO.md  clean-DIR(FINANCES)-CREW.json  litellm.AuthenticationError.md
DEV-MAN-CREW-DOCS/: CODE_ANALYZER_GUIDE.html  DEV-NOW-IMPLEMENTATION-PLAN.html  MONITORING_GUIDE.html  THE-PLAN.html  TODO.md  index.html
DEV-NOW/: CREW-UPDATES.yaml  TEST-PLAN.yaml  UPDATE-PLAN.md  UPDATE-RULES.yaml
code_analyzer/: __init__.py  analyzer.py  main.py  restart_monitoring.sh
configs/: ai_models.json
crews/: analyze_crews_crew.py  base_crew.py  code_analysis_crew.py  output_formatter.py  pr_generator_crew.py
docs/: ANALYSIS_STRATEGY.md
scripts/: analyze_codebase.py  analyze_structure.py  cleanup.py  consolidate.sh  debug.sh  fix_column.py  fix_migration.sh  git-push-all.sh  migrate_project.sh  monitor.sh  organize.sh  refresh.sh  run  run_analysis  run_updates.py  setup_dev.sh  setup_uv.sh  test.sh  test_check.sh  update_status.py  verify_imports.py
templates/: crew_template.yaml
tests/: conftest.py  test_analyzer.py  test_combined_analysis.py  test_crewai_docs_crew.py  test_crews.py  test_db_integration.py  test_environment.py  test_error_handler_crew.py  test_real_analysis.py  test_utils.py
(+256 files in other folders)
