[project]
name = "code_analyzer"
version = "0.1.0"
description = "Code analysis tool"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "loguru>=0.7.0",
    "pendulum>=2.0.0",
    "click>=8.0.0",
    "crewai>=0.11.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
