[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code_analyzer"
version = "0.1.0"
description = "A tool for analyzing Python code"
requires-python = ">=3.8"
dependencies = [
    "loguru>=0.7.2",
    "crewai>=0.80.0",
    "pendulum>=3.0.0",
    "openai>=1.3.5",
    "python-dotenv>=1.0.0",
    "click>=8.1.7",
    "pyyaml>=6.0.1",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiohttp>=3.8.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "gitpython>=3.1.40",
    "typing-extensions>=4.0.0",
    "tomli>=2.0.0",
    "chardet>=5.0.0",
    "psutil>=5.9.0"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0"
]
dev = [
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
    "flake8>=6.0.0"
]

[project.scripts]
code_analyzer = "code_analyzer.cli.main:cli"